--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -27,12 +27,15 @@
                     BorderThickness="2" BorderBrush="{Binding rarity, Converter={StaticResource RarityToColorConverter}}">
                     <Image Source="{Binding Converter={StaticResource ArtToImageConverter}}"/>
                 </Border>
-                <TextBlock Background="Black" FontSize="20" Text="+" FontWeight="Bold" Visibility="{Binding isActivated, Converter={StaticResource CompareToVisibilityConverter}, ConverterParameter={StaticResource True}}"
+                <TextBlock Background="Black" FontSize="16" Text="+" FontWeight="Bold" Visibility="{Binding isActivated, Converter={StaticResource CompareToVisibilityConverter}, ConverterParameter={StaticResource True}}"
                     Margin="5,3" VerticalAlignment="Top" HorizontalAlignment="Right" Foreground="Yellow"/>
-                <TextBlock Background="Black" FontSize="20" Text="{Binding rank, Converter={StaticResource ToStarsConverter}}" 
+                <TextBlock Background="Black" FontSize="16" Text="{Binding rank, Converter={StaticResource ToStarsConverter}}" 
                     Margin="5,3" VerticalAlignment="Top" HorizontalAlignment="Left" Foreground="Yellow"/>
-                <TextBlock Background="Black" FontSize="20" Text="{Binding level, StringFormat=+{0}}"
+                <TextBlock Background="Black" FontSize="16" Text="{Binding level, StringFormat=+{0}}"
                     Margin="5,3" VerticalAlignment="Bottom" HorizontalAlignment="Right" Foreground="LightGray"/>
+                <TextBlock Visibility="{Binding percentEnhancement, Converter={StaticResource InvertedCompareToVisibilityConverter}, ConverterParameter={StaticResource DoubleZero}}"
+                    Background="Black" FontSize="14" Text="{Binding percentEnhancement, Converter={StaticResource PercentConverter}}"
+                    Margin="5,3" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="GreenYellow"/>
                 <Border
                     HorizontalAlignment="Right" VerticalAlignment="Top"
                     BorderThickness="2" Width="32" BorderBrush="White" 
@@ -81,12 +84,15 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <ToggleButton Height="32" Margin="5" Grid.Column="0" Grid.Row="0" IsChecked="{Binding Filter13}">+13</ToggleButton>
-            <ToggleButton Height="32" Margin="5" Grid.Column="1" Grid.Row="0" IsChecked="{Binding Filter14}">+14</ToggleButton>
-            <ToggleButton Height="32" Margin="5" Grid.Column="0" Grid.Row="1" IsChecked="{Binding Filter15}">+15</ToggleButton>
-            <ToggleButton Height="32" Margin="5" Grid.Column="1" Grid.Row="1" IsChecked="{Binding FilterEquipedMax15}">Equipped 15-</ToggleButton>
+            <ToggleButton Height="32" Margin="5" Grid.Column="0" Grid.Row="0" IsChecked="{Binding Filter10_12}">+10-12</ToggleButton>
+            <ToggleButton Height="32" Margin="5" Grid.Column="0" Grid.Row="1" IsChecked="{Binding Filter13}">+13</ToggleButton>
+            <ToggleButton Height="32" Margin="5" Grid.Column="0" Grid.Row="2" IsChecked="{Binding Filter14}">+14</ToggleButton>
+            <ToggleButton Height="32" Margin="5" Grid.Column="1" Grid.Row="0" IsChecked="{Binding Filter15}">+15</ToggleButton>
+            <ToggleButton Height="32" Margin="5" Grid.Column="1" Grid.Row="1" IsChecked="{Binding Filter16}">+16</ToggleButton>
+            <ToggleButton Height="32" Margin="5" Grid.Column="1" Grid.Row="2" IsChecked="{Binding FilterEquiped}">Equipped</ToggleButton>
             <!--<ToggleButton Height="32" Margin="5" Grid.Column="1" Grid.Row="1" IsChecked="{Binding FilterNoEquiped}">No Equipped</ToggleButton>-->
         </Grid>
         <!-- Favorits -->
@@ -133,10 +139,13 @@
                         BorderThickness="2" BorderBrush="{Binding rarity, Converter={StaticResource RarityToColorConverter}}">
                         <Image Source="{Binding Converter={StaticResource ArtToImageConverter}}"/>
                     </Border>
-                    <TextBlock Background="Black" FontSize="20" Text="{Binding rank, Converter={StaticResource ToStarsConverter}}" 
-                    Margin="5,3" VerticalAlignment="Top" HorizontalAlignment="Left" Foreground="Yellow"/>
-                    <TextBlock Background="Black" FontSize="20" Text="{Binding level, StringFormat=+{0}}"
-                    Margin="5,3" VerticalAlignment="Bottom" HorizontalAlignment="Right" Foreground="LightGray"/>
+                    <TextBlock Background="Black" FontSize="16" Text="{Binding rank, Converter={StaticResource ToStarsConverter}}" 
+                        Margin="5,3" VerticalAlignment="Top" HorizontalAlignment="Left" Foreground="Yellow"/>
+                    <TextBlock Background="Black" FontSize="16" Text="{Binding level, StringFormat=+{0}}"
+                        Margin="5,3" VerticalAlignment="Bottom" HorizontalAlignment="Right" Foreground="LightGray"/>
+                    <TextBlock Visibility="{Binding percentEnhancement, Converter={StaticResource InvertedCompareToVisibilityConverter}, ConverterParameter={StaticResource DoubleZero}}"
+                        Background="Black" FontSize="14" Text="{Binding percentEnhancement, Converter={StaticResource PercentConverter}}"
+                        Margin="5,3" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="GreenYellow"/>
                     <Border
                         HorizontalAlignment="Right" VerticalAlignment="Top"
                         BorderThickness="2" Width="32" BorderBrush="White" 
